[package]
name = "rlist-driver-macro"
version = "0.1.10"
edition = "2021"
authors = [
    "Nikaidou Haruki <meteo.haru@gmail.com>"
]
repository = "https://github.com/rList-org/rlist-core.git"
license = "MIT"
description = "Processor macro for rList Driver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0.55"
quote = "1.0"
rlist_vfs = "0.1.3"
proc-macro2 = "1.0.79"