[package]
name = "rlist_vfs"
version = "0.1.2"
edition = "2021"
authors = [
    "Nikaidou Haruki <meteo.haru@gmail.com>"
]
repository = "https://github.com/rList-org/rlist-core.git"
license = "MIT"
description = "Virtual File System for rList"


[dependencies]
rand = "0.8.5"
async-trait = "0.1.77"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = { version = "0.4.35", features = ["serde"] }
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
